<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pathfinder</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_button_one">Generate</string>
    <string name="main_screen_button_two">Saved</string>
    <string name="map_name">Map Name:</string>
    <string name="start">Starting Location:</string>
    <string name="end">Ending Location:</string>
    <string name="next_button">Next</string>
    <string name="map_name_input">ie. Route to my house</string>
    <string name="start_input">ie. Pallet Town entrance</string>
    <string name="end_input">ie. Professor Oak\'s house</string>
    <string name="steps">steps taken in direction: </string>
    <string name="step">Step</string>
    <string name="total">Total Steps: </string>
    <string name="confirm">Complete</string>
    <string name="route">Routes</string>
    <string name="delete_route">Delete</string>
    

</resources>
