<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@drawable/background">

    <TextView        
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:text="@string/map_name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edit_name_text"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:hint="@string/map_name_input"
        android:ems="10"
        android:layout_marginBottom="10dp" >        
    </EditText>

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:text="@string/start"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dip"
        android:layout_marginBottom="10dp" >

        <EditText
            android:id="@+id/edit_start_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/start_input" />

        <ImageButton
            android:id="@+id/start_picture"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:text="@string/end" 
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dip"
        android:layout_marginBottom="10dp" >

        <EditText
            android:id="@+id/edit_end_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/end_input" />

        <ImageButton
            android:id="@+id/end_picture"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:gravity="center" >

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button" />

    </LinearLayout>

</LinearLayout>